--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
     padding: 20px; /* Adds padding inside each box */
     box-shadow: 0 0 10px rgba(0, 0, 0, 1.0); /* Adds shadow to the boxes */
     color: white; /* Sets text color for contrast */
+    flex-shrink: 1;
     box-sizing: border-box; /* Ensures padding and border are included in the element's total width and height */
     align-self: flex-start; /* aligns the content of each item to its size */
 }
